Replace GFLAGS_HAVE_* #defines by HAVE_* again.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,6 +75,28 @@ include (CheckTypeSize)
 include (CheckIncludeFileCXX)
 include (CheckCXXSymbolExists)
 
+if (MSVC)
+  set (HAVE_SYS_TYPES_H 1)
+  set (HAVE_STDINT_H    1)
+  set (HAVE_STDDEF_H    1) # used by CheckTypeSize module
+  set (HAVE_INTTYPES_H  0)
+  set (HAVE_UNISTD_H    0)
+  set (HAVE_SYS_STAT_H  1)
+  check_include_file_cxx ("shlwapi.h" HAVE_SHLWAPI_H)
+else ()
+  foreach (fname IN ITEMS unistd stdint inttypes sys/types sys/stat fnmatch)
+    string (TOUPPER "${fname}" FNAME)
+    string (REGEX REPLACE "/" "_" FNAME "${FNAME}")
+    if (NOT HAVE_${FNAME}_H)
+      check_include_file_cxx ("${fname}.h" HAVE_${FNAME}_H)
+    endif ()
+  endforeach ()
+  # the following are used in #if not #ifdef
+  bool_to_int (HAVE_STDINT_H)
+  bool_to_int (HAVE_SYS_TYPES_H)
+  bool_to_int (HAVE_INTTYPES_H)
+endif ()
+
 set (GFLAGS_INTTYPES_FORMAT "" CACHE STRING "Format of integer types: \"C99\" (uint32_t), \"BSD\" (u_int32_t), \"VC7\" (__int32)")
 set_property (CACHE GFLAGS_INTTYPES_FORMAT PROPERTY STRINGS "C99;BSD;VC7")
 mark_as_advanced (GFLAGS_INTTYPES_FORMAT)
@@ -114,56 +136,34 @@ set (GFLAGS_INTTYPES_FORMAT_BSD 0)
 set (GFLAGS_INTTYPES_FORMAT_VC7 0)
 set ("GFLAGS_INTTYPES_FORMAT_${GFLAGS_INTTYPES_FORMAT}" 1)
 
-foreach (fname IN ITEMS stdint sys/types fnmatch inttypes unistd sys/stat)
-  string (TOUPPER "${fname}" FNAME)
-  string (REGEX REPLACE "/" "_" FNAME "${FNAME}")
-  if (HAVE_${FNAME}_H)
-    # set by check_type_size already
-    set (GFLAGS_HAVE_${FNAME}_H ${HAVE_${FNAME}_H})
-  else ()
-    check_include_file_cxx ("${fname}.h" GFLAGS_HAVE_${FNAME}_H)
-  endif ()
-endforeach ()
-if (NOT GFLAGS_HAVE_FNMATCH_H AND WINDOWS)
-  check_include_file_cxx ("shlwapi.h" GFLAGS_HAVE_SHLWAPI_H)
-endif ()
-bool_to_int(GFLAGS_HAVE_STDINT_H)
-bool_to_int(GFLAGS_HAVE_SYS_TYPES_H)
-bool_to_int(GFLAGS_HAVE_INTTYPES_H)
-
 if (MSVC)
-  set (GFLAGS_HAVE_strtoll FALSE)
-  set (GFLAGS_HAVE_strtoq  FALSE)
+  set (HAVE_strtoll 0)
+  set (HAVE_strtoq  0)
 else ()
   foreach (fname IN ITEMS strtoll strtoq)
     string (TOUPPER "${fname}" FNAME)
-    check_cxx_symbol_exists ("${fname}" stdlib.h GFLAGS_HAVE_${FNAME})
+    check_cxx_symbol_exists ("${fname}" stdlib.h HAVE_${FNAME})
   endforeach ()
 endif ()
 
 set (CMAKE_THREAD_PREFER_PTHREAD TRUE)
 find_package (ThreadsCXX)
 if (Threads_FOUND AND CMAKE_USE_PTHREADS_INIT)
-  set (GFLAGS_HAVE_PTHREAD TRUE)
+  set (HAVE_PTHREAD 1)
   check_type_size (pthread_rwlock_t RWLOCK LANGUAGE CXX)
-  if (HAVE_RWLOCK)
-    set (GFLAGS_HAVE_RWLOCK TRUE)
-  else ()
-    set (GFLAGS_HAVE_RWLOCK FALSE)
-  endif ()
 else ()
-  set (GFLAGS_HAVE_PTHREAD FALSE)
+  set (HAVE_PTHREAD 0)
 endif ()
 
-if (UNIX AND NOT GFLAGS_HAVE_PTHREAD AND BUILD_gflags_LIB)
-  set_property (CACHE BUILD_gflags_LIB PROPERTY VALUE OFF)
+if (UNIX AND NOT HAVE_PTHREAD AND BUILD_gflags_LIB)
   if (CMAKE_HAVE_PTHREAD_H)
-    message (WARNING "Could not find the pthread(s) library."
-                     " Disabling the build of the multi-threaded gflags library.")
+    set (what "library")
   else ()
-    message (WARNING "Could not find the <pthread.h> header file."
-                     " Disabling the build of the multi-threaded gflags library.")
+    set (what ".h file")
   endif ()
+  message (FATAL_ERROR "Could not find pthread${what}. Check the log file"
+                       "\n\t${CMAKE_BINARY_DIR}${CMAKE_FILES_DIRECTORY}/CMakeError.log"
+                       "\nor disable the build of the multi-threaded gflags library (BUILD_gflags_LIB=OFF).")
 endif ()
 
 # ----------------------------------------------------------------------------
@@ -226,7 +226,7 @@ endif ()
 
 # ----------------------------------------------------------------------------
 # installation
-if (WIN32)
+if (WINDOWS)
   set (RUNTIME_INSTALL_DIR Bin)
   set (LIBRARY_INSTALL_DIR Lib)
   set (INCLUDE_INSTALL_DIR Include)
