Enable packaging of library using CPack.

--- a/src/config.h.in
+++ b/src/config.h.in
@@ -86,8 +86,10 @@
 // ---------------------------------------------------------------------------
 // Windows
 
-// Whether gflags library is shared.
-#define GFLAGS_IS_A_DLL @GFLAGS_IS_A_DLL@
+// Whether gflags library is a DLL.
+#ifndef GFLAGS_IS_A_DLL
+#  define GFLAGS_IS_A_DLL 0
+#endif
 
 // Always export symbols when compiling a shared library as this file is only
 // included by internal modules when building the gflags library itself.
