--- a/cmake/package.cmake.in
+++ b/cmake/package.cmake.in
@@ -38,8 +38,10 @@ elseif (CPACK_GENERATOR MATCHES "DEB")
     set (CPACK_DEBIAN_PACKAGE_ARCHITECTURE i386)
   endif ()
   set (CPACK_DEBIAN_PACKAGE_DEPENDS)
-  set (CPACK_DEBIAN_PACKAGE_SECTION  devel)
-  set (CPACK_DEBIAN_PACKAGE_PRIORITY optional)
+  set (CPACK_DEBIAN_PACKAGE_SECTION    "devel")
+  set (CPACK_DEBIAN_PACKAGE_PRIORITY   "optional")
+  set (CPACK_DEBIAN_PACKAGE_HOMEPAGE   "${CPACK_RPM_PACKAGE_URL}")
+  set (CPACK_DEBIAN_PACKAGE_MAINTAINER "${CPACK_PACKAGE_VENDOR}")
 
 # ------------------------------------------------------------------------------
 # RPM package
