Fix architecture used for RPM packages and DEB/RPM package file names.

--- a/cmake/package.cmake.in
+++ b/cmake/package.cmake.in
@@ -27,40 +27,23 @@ elseif (CPACK_GENERATOR MATCHES "DEB")
   else ()
     set (CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_FILE_NAME}0")
   endif ()
-  set (CPACK_PACKAGE_FILE_NAME   "${CPACK_PACKAGE_FILE_NAME}_${CPACK_PACKAGE_VERSION}-1_${CMAKE_SYSTEM_PROCESSOR}")
-
-  execute_process (
-    COMMAND         dpkg --print-architecture
-    RESULT_VARIABLE RV
-    OUTPUT_VARIABLE CPACK_DEBIAN_PACKAGE_ARCHITECTURE
-  )
-  if (NOT RV EQUAL 0)
-    set (CPACK_DEBIAN_PACKAGE_ARCHITECTURE i386)
-  endif ()
+  set (CPACK_PACKAGE_FILE_NAME   "${CPACK_PACKAGE_FILE_NAME}_${CPACK_PACKAGE_VERSION}-1_${CPACK_PACKAGE_ARCHITECTURE}")
 
   set (CPACK_DEBIAN_PACKAGE_DEPENDS)
-  set (CPACK_DEBIAN_PACKAGE_SECTION    "devel")
-  set (CPACK_DEBIAN_PACKAGE_PRIORITY   "optional")
-  set (CPACK_DEBIAN_PACKAGE_HOMEPAGE   "${CPACK_RPM_PACKAGE_URL}")
-  set (CPACK_DEBIAN_PACKAGE_MAINTAINER "${CPACK_PACKAGE_VENDOR}")
+  set (CPACK_DEBIAN_PACKAGE_SECTION      "devel")
+  set (CPACK_DEBIAN_PACKAGE_PRIORITY     "optional")
+  set (CPACK_DEBIAN_PACKAGE_HOMEPAGE     "${CPACK_RPM_PACKAGE_URL}")
+  set (CPACK_DEBIAN_PACKAGE_MAINTAINER   "${CPACK_PACKAGE_VENDOR}")
+  set (CPACK_DEBIAN_PACKAGE_ARCHITECTURE "${CPACK_PACKAGE_ARCHITECTURE}")
 
 # ------------------------------------------------------------------------------
 # RPM package
 elseif (CPACK_GENERATOR MATCHES "RPM")
 
-  execute_process (
-    COMMAND         dpkg --print-architecture
-    RESULT_VARIABLE RV
-    OUTPUT_VARIABLE CPACK_RPM_PACKAGE_ARCHITECTURE
-  )
-  if (NOT RV EQUAL 0)
-    set (CPACK_RPM_PACKAGE_ARCHITECTURE i386)
-  endif ()
-
   set (CPACK_PACKAGE_FILE_NAME   "${CPACK_PACKAGE_NAME}")
   if (DEVEL)
     set (CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_FILE_NAME}-devel")
   endif ()
-  set (CPACK_PACKAGE_FILE_NAME   "${CPACK_PACKAGE_FILE_NAME}-${CPACK_PACKAGE_VERSION}-1_${CMAKE_SYSTEM_PROCESSOR}")
+  set (CPACK_PACKAGE_FILE_NAME   "${CPACK_PACKAGE_FILE_NAME}-${CPACK_PACKAGE_VERSION}-1.${CPACK_PACKAGE_ARCHITECTURE}")
 
 endif ()
