--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -366,15 +366,31 @@ if (BUILD_PACKAGING)
     set (CPACK_RESOURCE_FILE_README "${CMAKE_CURRENT_LIST_DIR}/cmake/README_runtime.txt")
   endif ()
 
-  # system name used for binary package file name
+  # system/architecture
   if (WINDOWS)
     if (CMAKE_CL_64)
       set (CPACK_SYSTEM_NAME "win64")
     else ()
       set (CPACK_SYSTEM_NAME "win32")
     endif ()
+    set (CPACK_PACKAGE_ARCHITECTURE)
   else ()
     string (TOLOWER "${CMAKE_SYSTEM_NAME}" CPACK_SYSTEM_NAME)
+    execute_process (
+      COMMAND         dpkg --print-architecture
+      RESULT_VARIABLE RV
+      OUTPUT_VARIABLE CPACK_PACKAGE_ARCHITECTURE
+    )
+    if (RV EQUAL 0)
+	    string (STRIP "${CPACK_PACKAGE_ARCHITECTURE}" CPACK_PACKAGE_ARCHITECTURE)
+    else ()
+      execute_process (COMMAND uname -m OUTPUT_VARIABLE CPACK_PACKAGE_ARCHITECTURE)
+      if (CPACK_PACKAGE_ARCHITECTURE MATCHES "x86_64")
+	      set (CPACK_PACKAGE_ARCHITECTURE amd64)
+      else ()
+        set (CPACK_PACKAGE_ARCHITECTURE i386)
+      endif ()
+    endif ()
   endif ()
 
   # source package settings
@@ -383,10 +399,10 @@ if (BUILD_PACKAGING)
   set (CPACK_SOURCE_IGNORE_FILES      "/\\\\.git/;\\\\.swp$;\\\\.#;/#;\\\\.*~;cscope\\\\.*;/[Bb]uild[.+-_a-zA-Z0-9]*/")
 
   # default binary package settings
-  set (CPACK_INCLUDE_TOPLEVEL_DIRECTORY  TRUE)
-  set (CPACK_PACKAGE_FILE_NAME           "${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION}-${CPACK_SYSTEM_NAME}")
-  if (CMAKE_SYSTEM_PROCESSOR)
-    set (CPACK_PACKAGE_FILE_NAME         "${CPACK_PACKAGE_FILE_NAME}-${CMAKE_SYSTEM_PROCESSOR}")
+  set (CPACK_INCLUDE_TOPLEVEL_DIRECTORY TRUE)
+  set (CPACK_PACKAGE_FILE_NAME          "${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION}-${CPACK_SYSTEM_NAME}")
+  if (CPACK_PACKAGE_ARCHITECTURE)
+    set (CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_FILE_NAME}-${CPACK_PACKAGE_ARCHITECTURE}")
   endif ()
 
   # generator specific configuration file
