--- a/src/gflags_declare.h.in
+++ b/src/gflags_declare.h.in
@@ -113,13 +113,13 @@ typedef std::string clstring;
   DECLARE_VARIABLE(bool, B, name)
 
 #define DECLARE_int32(name) \
-  DECLARE_VARIABLE(GFLAGS_NAMESPACE::int32, I, name)
+  DECLARE_VARIABLE(::@GFLAGS_NAMESPACE@::int32, I, name)
 
 #define DECLARE_int64(name) \
-  DECLARE_VARIABLE(GFLAGS_NAMESPACE::int64, I64, name)
+  DECLARE_VARIABLE(::@GFLAGS_NAMESPACE@::int64, I64, name)
 
 #define DECLARE_uint64(name) \
-  DECLARE_VARIABLE(GFLAGS_NAMESPACE::uint64, U64, name)
+  DECLARE_VARIABLE(::@GFLAGS_NAMESPACE@::uint64, U64, name)
 
 #define DECLARE_double(name) \
   DECLARE_VARIABLE(double, D, name)
