--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -392,6 +392,8 @@ if (BUILD_PACKAGING)
       set (CPACK_SYSTEM_NAME "win32")
     endif ()
     set (CPACK_PACKAGE_ARCHITECTURE)
+  elseif (APPLE)
+    set (CPACK_PACKAGE_ARCHITECTURE darwin)
   else ()
     string (TOLOWER "${CMAKE_SYSTEM_NAME}" CPACK_SYSTEM_NAME)
     if (CMAKE_CXX_FLAGS MATCHES "-m32")
